@@ -203,10 +203,21 @@ create_LogFileSelection(void)
 
 
 void
-gerbv_log_handler(const gchar *log_domain,
-		  GLogLevelFlags log_level,
-		  const gchar *message, 
-		  gpointer user_data)
+gerbv_console_log_handler(const gchar *log_domain,
+			  GLogLevelFlags log_level,
+			  const gchar *message, 
+			  gpointer user_data)
+{
+
+    fprintf(stderr, "%s", message);
+} /* gerbv_console_log_handler */
+
+
+void
+gerbv_gtk_log_handler(const gchar *log_domain,
+		      GLogLevelFlags log_level,
+		      const gchar *message, 
+		      gpointer user_data)
 {
     GtkWidget *LogText = NULL;
     GdkColor textfgcolor;
